@@ -286,7 +286,8 @@
 					dragdrop : true,
 					jpgresize : true,
 					pngresize : true,
-					chunks : true
+					chunks : true,
+					progress: true
 				};
 
 				callback({success : true});
