@@ -280,7 +280,8 @@
 				uploader.features = {
 					jpgresize: true,
 					pngresize: true,
-					chunks: true
+					chunks: true,
+					progress: true
 				};
 
 				callback({success : true});
